--- a/src/styles/themes/bluetheme.css
+++ b/src/styles/themes/bluetheme.css
@@ -1,7 +1,7 @@
 /* Note: Color palettes are generated from primary: 155dfc */
 html {
   /* COLOR SYSTEM VARIABLES */
-  color-scheme: light;
+  color-scheme: light dark;
 
   /* Primary palette variables */
   --mat-sys-primary: light-dark(#004fe4, #b6c4ff);
