login and dashboard

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,11 +3,41 @@
 @use './styles/_tailwind' as tw;
 
 :root {
-  @include mat.button-overrides((
-    tonal-container-shape: var(--mat-sys-corner-medium),
-    text-container-shape: var(--mat-sys-corner-medium),
-    protected-container-shape: var(--mat-sys-corner-medium),
-    outlined-container-shape: var(--mat-sys-corner-medium),
-    filled-container-shape: var(--mat-sys-corner-medium),
-  ));
+  @include mat.button-overrides(
+    (
+      tonal-container-shape: var(--mat-sys-corner-medium),
+      text-container-shape: var(--mat-sys-corner-medium),
+      protected-container-shape: var(--mat-sys-corner-medium),
+      outlined-container-shape: var(--mat-sys-corner-medium),
+      filled-container-shape: var(--mat-sys-corner-medium)
+    )
+  );
+}
+
+.text-gradient {
+  @apply bg-gradient-to-r from-blue-600 to-indigo-600 bg-clip-text text-transparent;
+}
+
+.separator {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin-block: 1em;
+  &::before,
+  &::after {
+    content: '';
+    flex: 1;
+    border-bottom: 1px solid currentColor;
+    margin-bottom: -2px;
+  }
+
+  &:not(:empty) {
+    &::before {
+      margin-right: 0.25em;
+    }
+
+    &::after {
+      margin-left: 0.25em;
+    }
+  }
 }
