--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,3 +41,82 @@
     }
   }
 }
+
+a,
+button {
+  &[matbutton] {
+    &.bordered {
+      border: 1px solid currentColor;
+
+      &--lg {
+        border: 2px solid currentColor;
+      }
+
+      &--xl {
+        border: 4px solid currentColor;
+      }
+    }
+
+    &.size {
+      &--lg {
+        @include mat.button-overrides(
+          (
+            outlined-label-text-size: 1.1em,
+            filled-label-text-size: 1.1em
+          )
+        );
+        padding: 1.25em;
+
+        > .mat-icon {
+          font-size: 1.25em;
+          height: 1.25em;
+          width: 1.25em;
+        }
+      }
+      &--xl {
+        @include mat.button-overrides(
+          (
+            outlined-label-text-size: 1.25rem,
+            filled-label-text-size: 1.25rem
+          )
+        );
+        padding: 1.5em;
+        
+        > .mat-icon {
+          font-size: 1.5rem;
+          height: 1.5rem;
+          width: 1.5rem;
+        }
+      }
+    }
+
+    &.secondary {
+      @include mat.button-overrides(
+        (
+          filled-container-color: var(--mat-sys-secondary),
+          filled-label-text-color: var(--mat-sys-on-secondary)
+        )
+      );
+    }
+
+    &.tertiary {
+      @include mat.button-overrides(
+        (
+          filled-container-color: var(--mat-sys-tertiary),
+          filled-label-text-color: var(--mat-sys-on-tertiary)
+        )
+      );
+    }
+  }
+}
+
+button[maticonbutton],
+mat-icon {
+  &.error {
+    @include mat.icon-button-overrides(
+      (
+        icon-color: var(--mat-sys-error)
+      )
+    );
+  }
+}
